--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "[3467 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 3467/3467 [00:00<00:00, 4197.35it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 3467/3467 [00:00<00:00, 3627.91it/s]\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "(3000000, 300)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "Name: sarcastic, Length: 694, dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "50"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "(500002, 300)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 3467/3467 [00:00<00:00, 10829.23it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 3467/3467 [00:00<00:00, 12840.50it/s]\n"
      ]
     }
    ],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -474,56 +474,20 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "14/14 [==============================] - 8s 114ms/step - loss: 0.2437 - mae: 0.3995\n",
+      "14/14 [==============================] - 24s 261ms/step - loss: 0.2407 - mae: 0.3910\n",
       "Epoch 2/20\n",
-      "14/14 [==============================] - 1s 105ms/step - loss: 0.1970 - mae: 0.3664\n",
+      "14/14 [==============================] - 3s 248ms/step - loss: 0.1919 - mae: 0.3647\n",
       "Epoch 3/20\n",
-      "14/14 [==============================] - 1s 106ms/step - loss: 0.1878 - mae: 0.3688\n",
+      "14/14 [==============================] - 3s 240ms/step - loss: 0.1858 - mae: 0.3690\n",
       "Epoch 4/20\n",
-      "14/14 [==============================] - 1s 105ms/step - loss: 0.1841 - mae: 0.3659\n",
+      "14/14 [==============================] - 3s 232ms/step - loss: 0.1840 - mae: 0.3668\n",
       "Epoch 5/20\n",
-      "14/14 [==============================] - 1s 106ms/step - loss: 0.1822 - mae: 0.3666\n",
+      "14/14 [==============================] - 4s 248ms/step - loss: 0.1829 - mae: 0.3609\n",
       "Epoch 6/20\n",
-      "14/14 [==============================] - 1s 107ms/step - loss: 0.1812 - mae: 0.3634\n",
+      "14/14 [==============================] - 3s 249ms/step - loss: 0.1815 - mae: 0.3685\n",
       "Epoch 7/20\n",
-      "14/14 [==============================] - 1s 103ms/step - loss: 0.1800 - mae: 0.3579\n",
-      "Epoch 8/20\n",
-      "14/14 [==============================] - 1s 99ms/step - loss: 0.1804 - mae: 0.3681\n",
-      "Epoch 9/20\n",
-      "14/14 [==============================] - 1s 94ms/step - loss: 0.1753 - mae: 0.3526\n",
-      "Epoch 10/20\n",
-      "14/14 [==============================] - 1s 93ms/step - loss: 0.1727 - mae: 0.3521\n",
-      "Epoch 11/20\n",
-      "14/14 [==============================] - 1s 95ms/step - loss: 0.1746 - mae: 0.3452\n",
-      "Epoch 12/20\n",
-      "14/14 [==============================] - 1s 96ms/step - loss: 0.1701 - mae: 0.3514\n",
-      "Epoch 13/20\n",
-      "14/14 [==============================] - 1s 91ms/step - loss: 0.1671 - mae: 0.3402\n",
-      "Epoch 14/20\n",
-      "14/14 [==============================] - 1s 93ms/step - loss: 0.1634 - mae: 0.3372\n",
-      "Epoch 15/20\n",
-      "14/14 [==============================] - 1s 93ms/step - loss: 0.1626 - mae: 0.3347\n",
-      "Epoch 16/20\n",
-      "14/14 [==============================] - 1s 95ms/step - loss: 0.1598 - mae: 0.3360\n",
-      "Epoch 17/20\n",
-      "14/14 [==============================] - 1s 104ms/step - loss: 0.1549 - mae: 0.3276\n",
-      "Epoch 18/20\n",
-      "14/14 [==============================] - 1s 99ms/step - loss: 0.1529 - mae: 0.3192\n",
-      "Epoch 19/20\n",
-      "14/14 [==============================] - 1s 98ms/step - loss: 0.1486 - mae: 0.3184\n",
-      "Epoch 20/20\n",
-      "14/14 [==============================] - 1s 94ms/step - loss: 0.1527 - mae: 0.3186\n"
+      " 2/14 [===>..........................] - ETA: 3s - loss: 0.1808 - mae: 0.3716"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x24892703a60>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -532,48 +496,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "298     damn, imagine being vaxxed and then getting a ...\n",
-       "1691    that second vaccine dose is no joke is it 😵 be...\n",
-       "1407    my essay was so bad that my prof is giving me ...\n",
-       "1888    @iamgryphoneer i don't like to rag on people's...\n",
-       "1047    my stray boy playing… he is looking well but s...\n",
-       "                              ...                        \n",
-       "2275    damn instagram engagement is slow 😭 2 likes in...\n",
-       "1006    i gotta get out of this city. i made $18 doord...\n",
-       "1563    my grandpa has covid so i made a lil care pack...\n",
-       "2630    the last football game i went too. 1 year toda...\n",
-       "1615         words cannot express how much i hate glitter\n",
-       "Name: tweet, Length: 694, dtype: object"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 694/694 [00:00<00:00, 3652.78it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenized_texts_test = []\n",
     "for texto in tqdm(X_test):\n",
@@ -582,17 +516,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 694/694 [00:00<00:00, 3691.68it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in tqdm(range(len(tokenized_texts_test)), total=len(tokenized_texts_test)):\n",
     "    tokenized_texts_test[i] = preprocess_toks(tokenized_texts_test[i])"
@@ -600,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,35 +556,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.98      0.98      0.98       532\n",
-      "           1       0.92      0.93      0.93       162\n",
-      "\n",
-      "    accuracy                           0.97       694\n",
-      "   macro avg       0.95      0.95      0.95       694\n",
-      "weighted avg       0.97      0.97      0.97       694\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.9476062842290913"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report, roc_auc_score\n",
     "print(classification_report(y_test, y_pred))\n",
